Major changes using docker-compose to build complete gs1 resolver service! Still some testing to do but looking good!

--- a/data_gs1_org/config/api.ini
+++ b/data_gs1_org/config/api.ini
@@ -1,23 +1,15 @@
 ; Config file containing database access connection strings
 ; Never place in folder that the public could access though a web server!
 [databases]
-mssql_server_name=gs1uri-db.database.windows.net
+mssql_server_name=gs1resolver_dataentry_db
 mssql_db_name=gs1resolver-dataentry-db
-mssql_user_name=gs1uri_admin
-mssql_password=Shortly7uppercut1hen
+mssql_user_name=sa
+mssql_password=feorfhgofgq348ryfwfAHGAU
 
-;mssql_server_name=192.168.0.114
-;mssql_db_name=gs1resolver-dataentry-db
-;mssql_user_name=gs1uri_admin
-;mssql_password=Shortly7uppercut1hen
-
-
-
-mongodb_connection_string="mongodb://nicklansley:3iwyYdCfZtc3QkK6RCTi!@cluster0-shard-00-00-0esnb.azure.mongodb.net:27017,cluster0-shard-00-01-0esnb.azure.mongodb.net:27017,cluster0-shard-00-02-0esnb.azure.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true"
+mongodb_connection_string="mongodb://gs1resolver:gs1resolver@gs1resolver_document_db&retryWrites=true"
 
 [build]
 build_auth_key=ohf78qhrnhmrq8grnc97gc9wg7fmc79gfc9
 
 [resolver_endpoint]
-; resolver_endpoint_url = "https://id.gs1.org/"
 resolver_endpoint_url = "https://gs1resolver.azurewebsites.net/"
