--- a/dl_toolkit_server/Dockerfile
+++ b/dl_toolkit_server/Dockerfile
@@ -3,14 +3,23 @@
 # We'll be using node 12.10 and the tiny alpine linux image
 FROM node:12.10-alpine
 
-RUN apk add curl dos2unix
+RUN apk add curl dos2unix logrotate
 
 RUN mkdir /gs1dl
 COPY GS1DigitalLinkToolkit.js /gs1dl
 COPY server.js /gs1dl
+
+# Copy the digital link startup snd status scripts
 COPY digilink_toolkit_servers_start.sh /gs1dl
 COPY digilink_toolkit_servers_status.sh /gs1dl
 
+# Copy the log rotate config files and 'starting' log file
+COPY logrotate_dlserver /etc/logrotate.d/dlserver
+RUN dos2unix /etc/logrotate.d/dlserver
+COPY dlserver.log /var/log/dlserver.log
+RUN dos2unix /var/log/dlserver.log
+
+# Convert text file format to linux from DOS
 RUN find /gs1dl/* -type f -print0 | xargs -0 dos2unix
 
 # Open ports 3000 to 3009 on the container
