--- a/id_gs1_org/config/gs1resolver.ini
+++ b/id_gs1_org/config/gs1resolver.ini
@@ -1,4 +1,7 @@
 ; Config file containing database access connection strings
 ; Never place in folder that the public could access though a web server!
 [databases]
-mongodb_connection_string="mongodb://nicklansley:3iwyYdCfZtc3QkK6RCTi!@cluster0-shard-00-00-0esnb.azure.mongodb.net:27017,cluster0-shard-00-01-0esnb.azure.mongodb.net:27017,cluster0-shard-00-02-0esnb.azure.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true"
+mongodb_connection_string="mongodb://gs1resolver:gs1resolver@gs1resolver_document_db&retryWrites=true"
+
+[dl_toolkit_server]
+gs1dl_toolkit_server_domain="http://gs1dl_toolkit_server"
