Major changes using docker-compose to build complete gs1 resolver service! Bug fixes part 1!

--- a/data_gs1_org/config/api.ini
+++ b/data_gs1_org/config/api.ini
@@ -2,11 +2,11 @@
 ; Never place in folder that the public could access though a web server!
 [databases]
 mssql_server_name=gs1resolver_dataentry_db
-mssql_db_name=gs1resolver-dataentry-db
+mssql_db_name=gs1resolverdb
 mssql_user_name=sa
 mssql_password=feorfhgofgq348ryfwfAHGAU
 
-mongodb_connection_string="mongodb://gs1resolver:gs1resolver@gs1resolver_document_db&retryWrites=true"
+mongodb_connection_string="mongodb://gs1resolver:gs1resolver@gs1resolver_document_db:27017"
 
 [build]
 build_auth_key=ohf78qhrnhmrq8grnc97gc9wg7fmc79gfc9
