--- a/data_gs1_org/config/api.ini
+++ b/data_gs1_org/config/api.ini
@@ -1,15 +1,15 @@
 ; Config file containing database access connection strings
 ; Never place in folder that the public could access though a web server!
 [databases]
-mssql_server_name=gs1resolver_dataentry_db
+mssql_server_name=dataentry-sql-server
 mssql_db_name=gs1resolverdb
-mssql_user_name=sa
+mssql_user_name=dataentry_user
 mssql_password=feorfhgofgq348ryfwfAHGAU
 
-mongodb_connection_string="mongodb://gs1resolver:gs1resolver@gs1resolver_document_db:27017"
+mongodb_connection_string="mongodb://gs1resolver:gs1resolver@id-mongo-server:27017"
 
 [build]
 build_auth_key=ohf78qhrnhmrq8grnc97gc9wg7fmc79gfc9
 
 [resolver_endpoint]
-resolver_endpoint_url = "https://gs1resolver.azurewebsites.net/"
+resolver_endpoint_url = "https://id.gs1.org/"
