--- a/data_gs1_org/docker_config/resolver_ui_api.conf
+++ b/data_gs1_org/docker_config/resolver_ui_api.conf
@@ -7,10 +7,16 @@
         </IfModule>
 
         ServerAdmin webmaster@gs1.org
-        ServerName localhost
+        ServerName dataentry-web-server
         DocumentRoot /var/www/html/
         Alias /api /var/www/api
         Alias /ui  /var/www/ui
+
+        # This 'unsafe' option below is to allow underscores in the host name as the underscore _ is
+        # not considered 'safe'. However, this container is only accesed through a proxy set up
+        # in thw apache2 conf file in id_gs1_org container (id_gs1_org/docker_config/gs1resolver.conf)
+        # we do't have to worry in this case.
+        HttpProtocolOptions unsafe
 
         <Directory /var/www/html/>
             DirectoryIndex index.html index.php
@@ -20,6 +26,7 @@
             Allow from all
             Require all granted
         </Directory>
+
          <Directory /var/www/api/>
                  DirectoryIndex api.php
                  Options FollowSymLinks
@@ -36,6 +43,7 @@
                  Order Deny,Allow
                  Allow from All
          </Directory>
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
