--- a/id_gs1_org/docker_config/gs1resolver.conf
+++ b/id_gs1_org/docker_config/gs1resolver.conf
@@ -7,8 +7,13 @@
         </IfModule>
 
         ServerAdmin webmaster@gs1.org
-        ServerName localhost
+        ServerName id-mongo-server
+
         DocumentRoot /var/www/resolver/
+
+        # This 'unsafe' option below is to allow underscores in the host name as the underscore _ is
+        # not considered 'safe'.#
+        HttpProtocolOptions unsafe
 
         <Directory /var/www/resolver/>
             DirectoryIndex index.html index.php
@@ -19,6 +24,14 @@
             Require all granted
         </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+        # Enables external access to the container data_gs1_org for the api feature
+        ProxyPass        /api http://dataentry-web-server/api/
+        ProxyPassReverse /api http://dataentry-web-server/api/
+
+        # Enables external access to the container data_gs1_org for the ui web application
+        ProxyPass        /ui http://dataentry-web-server/ui/
+        ProxyPassReverse /ui http://dataentry-web-server/ui/
+
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
