Fixed mis-case of directory './dl-toolkit-Server' which works on Windows but does not on Linux! Now './dl-toolkit-server'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - gs1-resolver-network
 
   gs1dl-toolkit-server:
-    build: './dl_toolkit_Server'
+    build: './dl_toolkit_server'
     container_name: gs1dl-toolkit-server
     restart: always
     networks:
