--- a/External-Proxy-Apache2-VM/etc/apache2/sites-available/000-default-le-ssl.conf
+++ b/External-Proxy-Apache2-VM/etc/apache2/sites-available/000-default-le-ssl.conf
@@ -34,33 +34,53 @@
         # Enables external access to the container id_gs1_org for gs1 keys resolution
         ProxyPass        /cpid http://localhost:8080/cpid
         ProxyPassReverse /cpid http://localhost:8080/cpid
+        ProxyPass        /8010 http://localhost:8080/8010
+        ProxyPassReverse /8010 http://localhost:8080/8010
 
         ProxyPass        /gcn  http://localhost:8080/gcn
         ProxyPassReverse /gcn  http://localhost:8080/gcn
+        ProxyPass        /255  http://localhost:8080/255
+        ProxyPassReverse /255  http://localhost:8080/255
 
         ProxyPass        /gdti http://localhost:8080/gdti
         ProxyPassReverse /gdti http://localhost:8080/gdti
+        ProxyPass        /253  http://localhost:8080/253
+        ProxyPassReverse /253  http://localhost:8080/253
 
         ProxyPass        /giai http://localhost:8080/giai
         ProxyPassReverse /giai http://localhost:8080/giai
+        ProxyPass        /8004 http://localhost:8080/8004
+        ProxyPassReverse /8004 http://localhost:8080/8004
 
         ProxyPass        /ginc http://localhost:8080/ginc
         ProxyPassReverse /ginc http://localhost:8080/ginc
+        ProxyPass        /401  http://localhost:8080/401
+        ProxyPassReverse /401  http://localhost:8080/401
 
         ProxyPass        /gln  http://localhost:8080/gln
         ProxyPassReverse /gln  http://localhost:8080/gln
+        ProxyPass        /414  http://localhost:8080/414
+        ProxyPassReverse /414  http://localhost:8080/414
 
         ProxyPass        /gmn  http://localhost:8080/gmn
         ProxyPassReverse /gmn  http://localhost:8080/gmn
+        ProxyPass        /8013 http://localhost:8080/8013
+        ProxyPassReverse /8013 http://localhost:8080/8013
 
         ProxyPass        /grai http://localhost:8080/grai
         ProxyPassReverse /grai http://localhost:8080/grai
+        ProxyPass        /8003 http://localhost:8080/8003
+        ProxyPassReverse /8003 http://localhost:8080/8003
 
         ProxyPass        /gsin http://localhost:8080/gsin
         ProxyPassReverse /gsin http://localhost:8080/gsin
+        ProxyPass        /402  http://localhost:8080/402
+        ProxyPassReverse /402  http://localhost:8080/402
 
         ProxyPass        /gsrn http://localhost:8080/gsrn
         ProxyPassReverse /gsrn http://localhost:8080/gsrn
+        ProxyPass        /8018 http://localhost:8080/8018
+        ProxyPassReverse /8018 http://localhost:8080/8018
 
         ProxyPass        /gtin http://localhost:8080/gtin
         ProxyPassReverse /gtin http://localhost:8080/gtin
