Added backup volume and SQL Server backup / restore scripts * backups should not be relied upon using this method right now as tests have uncovered restore issues. Work in progress! *

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: dataentry-sql-server
     volumes:
       - gs1resolver-dataentry-volume:/gs1resolver_data
+      - gs1resolver-dbbackup-volume:/dbbackup
     restart: always
     networks:
       - gs1-resolver-network
@@ -51,6 +52,7 @@ services:
 volumes:
   gs1resolver-dataentry-volume: {}
   gs1resolver-document-volume: {}
+  gs1resolver-dbbackup-volume: {}
 
 networks:
   gs1-resolver-network:
