Changed docker-config.yml from version "3.6" to "3.0" in order to see if it is compatible with earlier versions of docker-compose that don't yet support 3.6. I also removed the network 'name' key/value as this is not supported in v3.0 (although this makes no difference to name of the internal network!)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.6"
+version: "3.0"
 
 services:
   dataentry-sql-server:
@@ -55,5 +55,4 @@ volumes:
   gs1resolver-dbbackup-volume: {}
 
 networks:
-  gs1-resolver-network:
-    name: gs1-resolver-network
+  gs1-resolver-network: {}
