--- a/id_web_server/docker_config/gs1resolver.conf
+++ b/id_web_server/docker_config/gs1resolver.conf
@@ -36,6 +36,8 @@
         ProxyPass        /unixtime http://unixtime-web-server/
         ProxyPassReverse /unixtime http://unixtime-web-server/
 
+        # Everything else
+
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
