Improvements to database script

--- a/dataentry_web_server/config/api.ini
+++ b/dataentry_web_server/config/api.ini
@@ -2,8 +2,8 @@
 ; Never place in folder that the public could access though a web server!
 [databases]
 mssql_server_name=dataentry-sql-server
-mssql_db_name=gs1resolverdb
-mssql_user_name=dataentry_user
+mssql_db_name=gs1resolver-dataentry-db
+mssql_user_name=sa
 mssql_password=feorfhgofgq348ryfwfAHGAU
 
 mongodb_connection_string="mongodb://gs1resolver:gs1resolver@id-mongo-server:27017"
