Stood up Kubernetes YAML files with Images of each container on DOcker Hub

--- a/k8s/frontend-proxy-server.yaml
+++ b/k8s/frontend-proxy-server.yaml
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
         - name: frontend-proxy-server
-          image: <container repository>/<image name>:<version>
+          image: nicklansley/gs1_digitallink_resolver_ce_frontend-proxy-server:v2.0.0
           ports:
             - containerPort: 80
               name: frontendproxy
