--- a/k8s/build-sync-server.yaml
+++ b/k8s/build-sync-server.yaml
@@ -49,7 +49,7 @@ spec:
     spec:
       containers:
         - name: build-sync-server
-          image: <container repository>/<image name>:<version>
+          image: nicklansley/gs1_digitallink_resolver_ce_build-sync-server:v2.0.0
           imagePullPolicy: IfNotPresent
 
           env:
