--- a/k8s/resolver-mongo-server.yaml
+++ b/k8s/resolver-mongo-server.yaml
@@ -49,7 +49,7 @@ spec:
     spec:
       containers:
         - name: resolver-mongo-server
-          image: <container repository>/<image name>:<version>
+          image: nicklansley/gs1_digitallink_resolver_ce_resolver-mongo-server:v2.0.0
           imagePullPolicy: IfNotPresent
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
@@ -65,3 +65,5 @@ spec:
         - name: resolver-document-volume
           persistentVolumeClaim:
             claimName: resolver-document-pv-claim
+      imagePullSecrets:
+        - name: acr-secret
