--- a/frontend_proxy_server/nginx.conf
+++ b/frontend_proxy_server/nginx.conf
@@ -23,25 +23,28 @@ http {
     keepalive_timeout  65;
     #gzip  on;
 
-    upstream resolver-web-servers {
-        least_conn;
-        server resolver1-web-server;
-        server resolver2-web-server;
-        server resolver3-web-server;
-        server resolver4-web-server;
-        server resolver5-web-server;
-    }
-
     server {
         listen 80;
-            location / {
-                proxy_pass http://resolver-web-servers;
-            }
-            location /api {
-                proxy_pass http://resolver-data-entry-server/api;
-            }
-            location /ui {
-                proxy_pass http://resolver-data-entry-server;
-            }
+        location / {
+            proxy_pass http://id-service;
+            proxy_buffer_size 16k;
+            proxy_buffers 4 16k;
+            proxy_busy_buffers_size 16k;
+        }
+        location /resolver {
+            proxy_pass http://data-entry-service/resolver;
+        }
+        location /redirect {
+            proxy_pass http://data-entry-service/redirect;
+        }
+        location /admin {
+            proxy_pass http://data-entry-service/admin;
+        }
+        location /reference {
+            proxy_pass http://data-entry-service/reference;
+        }
+        location /ui {
+            proxy_pass http://data-entry-service;
+        }
     }
 }
