--- a/resolver_data_entry_server/package.json
+++ b/resolver_data_entry_server/package.json
@@ -9,14 +9,17 @@
   "author": "Nick Lansley",
   "license": "ISC",
   "dependencies": {
+    "biguint-format": "^1.0.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "http-status-codes": "^1.4.0",
-    "pug": "^2.0.4",
     "morgan": "~1.9.1",
     "mssql": "^6.2.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pug": "^2.0.4",
+    "pug-lint": "^2.6.0"
   }
 }
