--- a/resolver_web_server/package.json
+++ b/resolver_web_server/package.json
@@ -4,19 +4,14 @@
   "description": "GS1 Digital Link Resolver Service",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node_modules/.bin/nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "Nick Lansley",
   "license": "ISC",
   "dependencies": {
     "http-status-codes": "^1.4.0",
-    "mongodb": "^3.5.0",
+    "mongodb": "^3.5.8",
     "node-fetch": "^2.6.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
   }
 }
