--- a/frontend_proxy_server/nginx.conf
+++ b/frontend_proxy_server/nginx.conf
@@ -21,7 +21,7 @@ http {
     sendfile        on;
     #tcp_nopush     on;
     keepalive_timeout  65;
-    #gzip  on;
+    gzip  on;
 
     server {
         listen 80;
@@ -31,6 +31,7 @@ http {
             proxy_buffers 4 16k;
             proxy_busy_buffers_size 16k;
         }
+
         location /resolver {
             proxy_pass http://data-entry-service/resolver;
         }
