--- a/resolver_web_server/Dockerfile
+++ b/resolver_web_server/Dockerfile
@@ -8,7 +8,7 @@ ENV PORT=80
 # Enter the fully qualified domain name of your implementation of Resolver, which will be used in
 # certain response HTTP headers. Include the "https://" or "http://" prefix depedning on your implementation.
 # NB. This value is only used as a string in the "Link:" HTTP response header. Do not include an end forward-slash!
-ENV RESOLVER_FQDN="https://id.gs1.org"
+ENV RESOLVER_FQDN="http://localhost"
 
 RUN mkdir /resolver
 COPY templates /resolver/templates
