--- a/k8s/frontend-proxy-server.yaml
+++ b/k8s/frontend-proxy-server.yaml
@@ -1,4 +1,4 @@
-# Frontend proxy server routing traffic to various container based on certain rules in nginx.conf
+# Frontend proxy server routing traffic to various containers based on certain rules in nginx.conf
 apiVersion: v1
 kind: Service
 
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
         - name: frontend-proxy-server
-          image: nicklansley/gs1_digitallink_resolver_ce_frontend-proxy-server:v2.2.0
+          image: nicklansley/gs1_digitallink_resolver_ce_frontend-proxy-server:v2.3.0
           ports:
             - containerPort: 80
               name: frontendproxy
